--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -1,23 +1,22 @@
+hr {
+  margin-top: 0;
+}
+
 .guitar {
   border-top: 1px solid #333;
   width: 130px;
   background: #eee;
-  /*background: #fff1ae;*/
-  /*font-size: 0px;*/
-  /*letter-spacing: 0px;*/
-  /*word-spacing: 0px;*/
   padding: 0 5px 0 5px;
+  margin-left: 30px;
 }
 
 .guitar .tunings .tuning {
-  /*font-size: 14px;*/
   width: 20px;
   text-align: center;
   display: inline-block;
 }
 
 .guitar .zeroes .zero {
-  /*font-size: 14px;*/
   width: 20px;
   text-align: center;
   display: inline-block;
@@ -29,7 +28,6 @@
 
 .guitar .fret .index {
   position: absolute;
-  /*font-size: 14px;*/
   margin-left: -25px;
   margin-top:  -12px;
 }
@@ -48,18 +46,22 @@
 .guitar .fret .string .fa {
   position: absolute;
   margin: 21px -6px;
+  z-index: 12;
 }
 
 .guitar .fret .string:after {
   content: "";
   position: absolute;
-  z-index: 1;
+  z-index: 0;
   top: 0;
   bottom: 0;
   left: 50%;
   border-left: 1px solid #333;
 }
 
+.color-muted {
+  color: #adadad;
+}
 .color-0 {
   color: #5ca793;
 }
